--- a/src/css/auth/Login.module.css
+++ b/src/css/auth/Login.module.css
@@ -63,9 +63,35 @@
   font-weight: bold;
 }
 
-.socalLoginText{
+.socalLoginText,
+.AlreadyText{
   text-align: center;
   color: rgba(0, 0, 0, 0.4);
   font-weight: bold;
   margin-top: 10%;
+  
+}
+
+.socalImg{
+  margin-top: 15%;
+}
+
+.AlreadyText,
+.JoinUpTtext{
+  font-family: "Inter", sans-serif;
+  margin-top: 15%;  
+  font-size: 14px;
+}
+
+.AlreadyText{
+  margin-left: 18%;
+}
+
+.JoinUpTtext{
+  margin-left: 3%;
+  font-weight: bold;
+}
+
+.wrapSocal {
+  display: flex;
 }
