--- a/src/css/Laundry/Laundry.module.css
+++ b/src/css/Laundry/Laundry.module.css
@@ -68,3 +68,70 @@
   font-size: 14px;
   margin-top: 10%;
 }
+
+.b1,
+.b2,
+.b3,
+.b4,
+.b5,
+.b6,
+.b7,
+.b8,
+.b9,
+.b10,
+.b11,
+.b12{
+  position: absolute;
+  left: 30vw;
+  height: 5vh;
+  width: 15vw;
+  border-radius: 1vh;
+  border: none;
+  background-color: #079b27;
+}
+
+.b1,
+.b2,
+.b3,
+.b4,
+.b7,
+.b10{
+  top: 53.5vh;
+}
+
+.b2,
+.b5,
+.b8,
+.b11{
+  margin-left: 22.5vw;
+}
+
+.b3,
+.b6,
+.b9,
+.b12{
+  margin-left: 45.5vw;
+}
+
+.b4,
+.b5,
+.b6{
+  top: 59.5vh;
+}
+
+.b7,
+.b8,
+.b9{
+  top: 65.5vh;
+}
+
+.b10,
+.b11,
+.b12{
+  top:71.5vh;
+} 
+
+.reserved {
+  background-color: red;
+  cursor: not-allowed;
+}
