Fix: 세탁 화면 호실번호로 가져오기

--- a/src/css/Laundry/Laundry.module.css
+++ b/src/css/Laundry/Laundry.module.css
@@ -87,7 +87,7 @@
   width: 15vw;
   border-radius: 1vh;
   border: none;
-  background-color: #079b27;
+  background-color: #fff;
 }
 
 .b1,
@@ -132,6 +132,6 @@
 } 
 
 .reserved {
-  background-color: red;
-  cursor: not-allowed;
+  font-weight: bold;
+  font-size: 15px;
 }
