--- a/src/css/Laundry/Laundry.module.css
+++ b/src/css/Laundry/Laundry.module.css
@@ -3,8 +3,7 @@
   font-family: "Inter", sans-serif;
 }
 .title{
-  padding: 5%;
-  /* font-size: 17px; */
+  padding: 5vw;
   font-weight: bold;
 }
 
@@ -12,27 +11,26 @@
   display: flex;
   align-items: center;
   text-align: center;
-  margin-top: 7%;
 }
 .ViewLaundry1,
 .ViewLaundry2,
 .ViewLaundry3{
   background-color: #FFEF9E;
-  width: 30%;
-  border-radius: 10px;
-  height: 190px;
-  margin-left: 2.5%;
+  width: 30vw;
+  border-radius: 1vh;
+  height: 23.3vh;
+  margin-left: 2.5vw;
 }
 
 .one,
 .two,
 .three{
-  border-radius: 50%;
+  border-radius: 50vw;
   background-color: #fff;
-  width: 12%;
+  width: 3vw;
   text-align: center;
-  padding: 2%;
-  margin: 3%; 
+  padding: 0.5vw;
+  margin: 1.5vw; 
 }
 
 .oneContent,
@@ -43,18 +41,18 @@
 
 .Laundring,
 .emptyLaundry{
-  margin-top: 13%;
-  margin-bottom: 10%;
+  margin-top: 1.5vh;
+  margin-bottom: 3vh;
 }
 
 .ing{
   text-align: center;
-  margin-top: 20%;
+  margin-top: 20vh;
 }
 
 .Tables{
   text-align: center;
-  margin-top: 13%;
+  margin-top: 4vh;
 }
 
 .resLaundry{
@@ -96,7 +94,7 @@
 .b4,
 .b7,
 .b10{
-  top: 53.5vh;
+  top: 48.2vh;
 }
 
 .b2,
@@ -110,25 +108,25 @@
 .b6,
 .b9,
 .b12{
-  margin-left: 45.5vw;
+  margin-left: 45vw;
 }
 
 .b4,
 .b5,
 .b6{
-  top: 59.5vh;
+  top: 54.2vh;
 }
 
 .b7,
 .b8,
 .b9{
-  top: 65.5vh;
+  top: 60.3vh;
 }
 
 .b10,
 .b11,
 .b12{
-  top:71.5vh;
+  top:66.2vh;
 } 
 
 .reserved {
