--- a/src/css/reservation/Reservation.module.css
+++ b/src/css/reservation/Reservation.module.css
@@ -1,6 +1,7 @@
 
 .container{
-  padding: 5%;
+  margin-left: 5vw;
+  margin-top: 0.5vh;
 
 }
 
@@ -9,7 +10,7 @@
 }
 
 .LaundryResTable{
-  margin-top: 4vh;
+  margin-top: 1vh;
 }
 
 .ResBtn{
@@ -49,7 +50,7 @@
 .b4,
 .b7,
 .b10{
-  top: 23.5vh;
+  top: 18.8vh;
   margin-left: 22vw;
 }
 
@@ -70,19 +71,19 @@
 .b4,
 .b5,
 .b6{
-  top: 37.5vh;
+  top: 32.7vh;
 }
 
 .b7,
 .b8,
 .b9{
-  top: 52vh;
+  top: 47.2vh;
 }
 
 .b10,
 .b11,
 .b12{
-  top: 67vh;
+  top: 62vh;
 }
 
 .active {
