--- a/src/css/Laundry/Laundry.module.css
+++ b/src/css/Laundry/Laundry.module.css
@@ -85,7 +85,7 @@
   width: 15vw;
   border-radius: 1vh;
   border: none;
-  background-color: #fff;
+  background-color: #ffffff00;
 }
 
 .b1,
@@ -94,39 +94,39 @@
 .b4,
 .b7,
 .b10{
-  top: 48.2vh;
+  top: 48.5vh;
 }
 
 .b2,
 .b5,
 .b8,
 .b11{
-  margin-left: 22.5vw;
+  margin-left: 21.5vw;
 }
 
 .b3,
 .b6,
 .b9,
 .b12{
-  margin-left: 45vw;
+  margin-left: 42vw;
 }
 
 .b4,
 .b5,
 .b6{
-  top: 54.2vh;
+  top: 54.6vh;
 }
 
 .b7,
 .b8,
 .b9{
-  top: 60.3vh;
+  top: 60.8vh;
 }
 
 .b10,
 .b11,
 .b12{
-  top:66.2vh;
+  top:66.5vh;
 } 
 
 .reserved {
