--- a/src/css/reservation/Reservation.module.css
+++ b/src/css/reservation/Reservation.module.css
@@ -2,7 +2,7 @@
 .container{
   margin-left: 5vw;
   margin-top: 0.5vh;
-
+  overflow: auto;
 }
 
 .title{
@@ -11,6 +11,7 @@
 
 .LaundryResTable{
   margin-top: 1vh;
+  width: 90vw;
 }
 
 .ResBtn{
@@ -50,7 +51,7 @@
 .b4,
 .b7,
 .b10{
-  top: 18.8vh;
+  top: 19.8vh;
   margin-left: 22vw;
 }
 
@@ -58,32 +59,31 @@
 .b5,
 .b8,
 .b11{
-  margin-left: 45.2vw;
+  margin-left: 46.2vw;
 }
 
 .b3,
 .b6,
 .b9,
 .b12{
-  margin-left: 68.5vw;
+  margin-left: 69.5vw;
 }
 
 .b4,
 .b5,
 .b6{
-  top: 32.7vh;
+  top: 35.7vh;
 }
-
 .b7,
 .b8,
 .b9{
-  top: 47.2vh;
+  top: 51.2vh;
 }
 
 .b10,
 .b11,
 .b12{
-  top: 62vh;
+  top: 67.5vh;
 }
 
 .active {
